# vpn-desktop

./: Cargo.toml  README.md
packaging/linux/: README.md  TESTING.md  build-deb.sh  check-install.sh  install.sh  uninstall.sh  vpn-desktop.desktop
packaging/linux/deb/DEBIAN/: control  postinst  postrm
packaging/linux/icons/: LICENSE.txt
packaging/linux/systemd/: vpn-desktopd.service  vpn-desktopd.socket
src/: app.rs  config.rs  daemon.rs  ipc.rs  ipc_client.rs  lib.rs  main.rs  vpn.rs
src/app/: connect.rs  profiles.rs  proxies.rs  settings.rs  state.rs  tray.rs  widgets.rs
